# os_name

./: CMakeLists.txt  README.md
.github/workflows/: build_and_run_tests.yml
include/os_name/: os_name.hpp
src/: os_name.cpp
tests/: CMakeLists.txt  tests.cpp
